Add mixin for centering blocks.

--- a/docs/styles/utils.scss
+++ b/docs/styles/utils.scss
@@ -31,3 +31,11 @@
     margin: 0;
   }
 }
+
+.doc-center-block-mixin-example {
+  @include center-block;
+  width: 200px;
+  height: 200px;
+  background: $brand-gray;
+  border: 1px solid $brand-gray-dk;
+}
