--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -12,6 +12,12 @@
   }
 }
 
+@mixin center-block() {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @mixin text-ellipsis($max-width: 100%) {
   display: inline-block;
   overflow: hidden;
