--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -2,6 +2,7 @@
 @import "colors";
 @import "variables";
 @import "utils";
+@import "icons/variables";
 @import "icons/icons";
 
 @import "base/type";
