--- a/styles/components/list-group.scss
+++ b/styles/components/list-group.scss
@@ -4,6 +4,8 @@
   border-radius: $border-radius-base;
   color: $brand-black;
 
+  > a { color: $brand-black; }
+
   > .menuitem {
     @include link-no-underscore;
     position: relative;
