--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -44,6 +44,23 @@
     border-bottom-right-radius: $border-radius-base;
   }
 
+  > .table.-bordered > thead > tr > th:first-child, 
+  > .table.-bordered > tbody > tr > td:first-child {
+    border-left: 0;
+  }
+
+  > .table.-bordered > thead > tr > th:last-child, 
+  > .table.-bordered > tbody > tr > td:last-child {
+    border-right: 0;
+  }
+
+  > .table.-bordered > tbody > tr:last-child { border-bottom: 0; }
+
+  > .list-group > .menuitem {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+
 	&.-default {
 		@include panel-variant($brand-gray);
 	}
