--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -44,6 +44,10 @@
     border-bottom-right-radius: $border-radius-base;
   }
 
+  // https://github.com/dev-onenetworkecommerce/aia/pull/62/files
+  // in the discussion, it wasn't decided whether to
+  // include the .-bordered modifier here (meaning, we're only dealing with .table)
+  // refactor soon.
   > .table.-bordered > thead > tr > th:first-child, 
   > .table.-bordered > tbody > tr > td:first-child {
     border-left: 0;
