made the badge work with list-group

--- a/styles/components/list-group.scss
+++ b/styles/components/list-group.scss
@@ -37,6 +37,10 @@
     background-color: $brand-primary;
   }
 
+  > .menuitem > .badge {
+    float: right;
+  }
+
   > .menuitem.-selected > .icon {
     color: $brand-white;
   }
