removed padding; added min-width

--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -38,7 +38,7 @@
 
   > .pages > .page {
     display: inline-block;
-    padding: 2px 5px;
+    min-width: 15px;
     color: $brand-gray;
     font-size: $font-size-small;
     background: transparent;
