--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -1,4 +1,5 @@
 .pagination {
+
   > .action {
     display: inline-block;
     padding: 2px 10px;
@@ -10,6 +11,7 @@
     outline: none; /* remove native outline */
     cursor: pointer;
     min-width: 80px;
+    text-decoration: none;
   }
 
   > .action:hover {
@@ -48,6 +50,7 @@
     outline: none; /* remove native outline */
     cursor: pointer;
     transition: 0.15s background;
+    text-decoration: none;
   }
 
   > .pages > .page:hover,
