--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -100,12 +100,12 @@
     cursor: not-allowed;
   }
 
-  > .pre-icon {
-    margin-right: 10px;
+  > .icon:first-child {
+    margin-right: ($padding-x / 2);
   }
 
-  > .post-icon {
-    margin-left: 10px;
+  > .icon:last-child {
+    margin-left: ($padding-x / 2);
   }
 }
 
