Remove margin from lone-icons in buttons.

--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -107,6 +107,10 @@
   > .icon:last-child {
     margin-left: ($padding-x / 2);
   }
+
+  > .icon:first-child:last-child {
+    margin: 0;
+  }
 }
 
 .btn-group {
