--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -1,14 +1,8 @@
 .dropdown {
-  position: relative;
+  z-index: 999;
+  position: absolute;
 
   .menu {
-    z-index: 999;
-    position: absolute;
-    top: 100%;
-    left: 0;
-
-    list-style: none;
-
     margin: 2px 0 0;
     padding: 5px 0;
     min-width: 160px;
@@ -18,24 +12,24 @@
     border-radius: $border-radius-base;
   }
 
-  .menu > li > a {
+  .menu > a {
     display: block;
     width: 100%;
     padding: 5px 20px;
     color: $brand-black;
   }
 
-  .menu > li > a,
-  .menu > li > a:hover {
+  .menu > a,
+  .menu > a:hover {
     text-decoration: none;
   }
 
-  .menu > li > a:hover,
-  .menu > li > a.-active {
+  .menu > a:hover,
+  .menu > a.-active {
     background: $brand-gray;
   }
 
-  .menu > li > a.-disabled {
+  .menu > a.-disabled {
     color: $brand-gray;
     cursor: not-allowed;
   }
