--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -1,36 +1,71 @@
 .dropdown {
+  $dropdown-arrow-size: 6px;
   z-index: 999;
   position: absolute;
+  // Default is bottom (dropdown)
+  margin-top: $padding-y;
 
-  .menu {
-    margin: 2px 0 0;
-    padding: 5px 0;
-    min-width: 160px;
-
-    background: #fff;
-    border: 1px solid $brand-gray-dk;
-    border-radius: $border-radius-base;
+  // Dropup
+  &.-up {
+    margin-bottom: $padding-y;
   }
 
-  .menu > a {
+  &.up > .menu::before {
+    left: initial;
+    right: $dropdown-arrow-size;
+  }
+
+  > .menu {
+    position: relative;
+    padding: ($padding-x / 2) 0;
+    min-width: 140px;
+    font-size: $font-size-small;
+    background: $brand-white;
+    border: 1px solid $brand-gray-lt;
+    border-radius: $border-radius-base;
+    box-shadow: 0 0 5px $brand-gray-lt;
+  }
+
+  > .menu::before,
+  > .menu::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -($dropdown-arrow-size * 2);
+    left: $dropdown-arrow-size;
+    height: 0;
+    width: 0;
+    border: $dropdown-arrow-size solid transparent;
+  }
+
+  > .menu::before {
+    border-bottom-color: $brand-gray;
+  }
+
+  > .menu::after {
+    border-bottom-color: $brand-white;
+  }
+
+  > .menu > a {
     display: block;
     width: 100%;
-    padding: 5px 20px;
+    padding: ($padding-x / 4) ($padding-y * 1.5);
     color: $brand-black;
   }
 
-  .menu > a,
-  .menu > a:hover {
+  > .menu > a,
+  > .menu > a:hover {
     text-decoration: none;
   }
 
-  .menu > a:hover,
-  .menu > a.-active {
-    background: $brand-gray;
+  > .menu > a:hover,
+  > .menu > a.-active {
+    color: $brand-white;
+    background: $brand-primary;
   }
 
-  .menu > a.-disabled {
-    color: $brand-gray;
+  > .menu > a.-disabled {
+    color: $brand-gray-lt;
     cursor: not-allowed;
   }
 }
