added no bg and border button

--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -54,7 +54,7 @@
     &:focus {
       color: darken($brand-primary, 5%);
       text-decoration: underline;
-      background: transparet;
+      background: transparent;
     }
   }
 
