change -clear  to -plain

--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -47,7 +47,7 @@
   &.-emerald { @include btn-variant($brand-emerald); }
   &.-sun { @include btn-variant($brand-sun); }
   &.-crimson { @include btn-variant($brand-crimson); }
-  &.-clear {
+  &.-plain {
     @include btn-variant(transparent, $brand-primary);
 
     &:hover,
