--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -35,8 +35,7 @@
   }
 
   > .body + .body {
-    border-top: 1px solid;
-    background: 1px solid $brand-gray-lt;
+    border-top: 1px solid $brand-gray-lt;
   }
 
   > .footer {
