--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -22,5 +22,6 @@
 @import "components/panel";
 @import "components/hero";
 @import "components/dropdown";
+@import "components/modal";
 @import "components/tooltip";
 @import "components/slate";
