--- a/styles/base/form.scss
+++ b/styles/base/form.scss
@@ -6,19 +6,17 @@
 }
 
 .form-control {
+  vertical-align: middle;
   display: block;
   width: 100%;
   min-height: 34px;
   padding: 7px 8px;
-  vertical-align: middle;
-  background-color: $brand-white;
   border: 1px solid $brand-gray;
   border-radius: $border-radius-base;
+  background-color: $brand-white;
   outline: none;
 
-  &:focus {
-    border-color: $brand-sky;
-  }
+  &:focus { border-color: $brand-sky; }
 
   &.-disabled,
   &:disabled {
@@ -26,27 +24,14 @@
     background: $brand-gray-lt;
   }
 
-  &.-sky {
-    @include form-variant($brand-sky);
-  }
-
-  &.-emerald {
-    @include form-variant($brand-emerald);
-  }
-
-  &.-crimson {
-    @include form-variant($brand-crimson);
-  }
-
-  &.-sun {
-    @include form-variant($brand-sun);
-  }
+  &.-sky { @include form-variant($brand-sky); }
+  &.-emerald { @include form-variant($brand-emerald); }
+  &.-crimson { @include form-variant($brand-crimson); }
+  &.-sun { @include form-variant($brand-sun); }
 }
 
 // fix issue with <select> padding
-select.form-control {
-  height: 34px;
-}
+select.form-control { height: 34px; }
 
 label {
   width: 100%;
@@ -54,15 +39,14 @@ label {
 }
 
 // form containers
-.form-group {
-  margin-bottom: 20px;
-}
+.form-group { margin-bottom: 20px; }
 
 .input-group {
   position: relative;
   display: table;
   border-collapse: separate;
   width: 100%;
+  border: 1px solid $brand-gray;
 
   > .form-control:first-child,
   > .addon:first-child,
@@ -93,28 +77,19 @@ label {
     z-index: 2;
     float: left;
     width: 100%;
+    border: 0;
   }
 
   > .addon {
     z-index: 1;
     width: 1%;
+    vertical-align: middle;
     padding: 0 8px;
     min-height: $form-size;
-    background: $brand-gray-lt;
-    border: 1px solid $brand-gray;
     border-radius: $border-radius-base;
-    vertical-align: middle;
   }
 
-  > .addon:first-child {
-    border-right: 0;
-  }
-
-  > .addon:last-child {
-    border-left: 0;
-  }
-
-  > .addon.-btn {
-    padding: 0;
-  }
+  > .addon:first-child { border-right: 0; }
+  > .addon:last-child { border-left: 0; }
+  > .addon.-btn { padding: 0; }
 }
