--- a/styles/components/modal.scss
+++ b/styles/components/modal.scss
@@ -31,12 +31,13 @@ body.modal-body {
 
 // Position `.modal-dialog` in the backdrop
 .modal {
+  z-index: $modal-zIndex;
+  overflow: scroll;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: $modal-zIndex;
 }
 
 // @TODO
