--- a/styles/base/form.scss
+++ b/styles/base/form.scss
@@ -84,7 +84,7 @@ label {
     border-left: 0;
 
     &:focus { 
-      box-shadow: 0 0 2px 1px rgba(82,181,229,1);
+      border: 1px solid $brand-sky;
     }
   }
 
