Add Form Errors

--- a/styles/base/form.scss
+++ b/styles/base/form.scss
@@ -41,6 +41,16 @@
   &.-sun {
     @include form-variant($brand-sun);
   }
+
+  &.-error {
+    @include form-variant($brand-crimson);
+    background-color: rgba(240, 95, 80, 0.6);
+    color: $brand-crimson;
+  }
+  &.-error::-webkit-input-placeholder {
+   color: $brand-crimson;
+  }
+
 }
 
 // fix issue with <select> padding
