--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -60,8 +60,10 @@
     cursor: not-allowed;
   }
 
-  > .menu > a > .icon {
-    padding: ($padding-y / 2);
+  > .menu > a > .icon:first-child {
+    width: 20px;
+    // 16px is the default icon size
+    // 4px = allowance
   }
 
   // Dropup
