--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -19,6 +19,7 @@
 @import "components/nav";
 @import "components/breadcrumbs";
 @import "components/list-group";
+@import "components/image-preloader";
 @import "components/panel";
 @import "components/hero";
 @import "components/dropdown";
