--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -66,6 +66,7 @@
 
   > .menu > .divider {
     height: 1px;
+    margin: 5px 0px;
     background-color: $brand-gray-lt;
   }
 
@@ -88,8 +89,8 @@
 
   &.-up > .menu::before,
   &.-up > .menu::after {
-    left: initial;
-    right: $dropdown-arrow-size;
+    left: $dropdown-arrow-size;
+    right: initial;
     top: initial;
     bottom: -($dropdown-arrow-size * 2);
     border-bottom-color: transparent;
