adapt the value of menu padding to the divider margin

--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -66,7 +66,7 @@
 
   > .menu > .divider {
     height: 1px;
-    margin: 5px 0px;
+    margin: ($padding-x / 2) 0;
     background-color: $brand-gray-lt;
   }
 
