Tweak form border color to `$brand-black`.

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -12,7 +12,7 @@
   padding: 7px 8px;
   vertical-align: middle;
   background-color: $brand-white;
-  border: 1px solid $brand-gray;
+  border: 1px solid $brand-black;
   border-radius: $border-radius-base;
   outline: none;
 
