Tweak disabled form input according to design.

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -22,8 +22,9 @@
 
   &.-disabled,
   &:disabled {
+    color: $brand-gray;
+    border-color: $brand-gray;
     cursor: not-allowed;
-    background: $brand-gray-lt;
   }
 
   &.-sky {
