added steps breadcrumbs

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -18,6 +18,7 @@
 @import "components/badge";
 @import "components/nav";
 @import "components/breadcrumbs";
+@import "components/steps";
 @import "components/list-group";
 @import "components/panel";
 @import "components/hero";
