fix line height to padding

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -56,7 +56,7 @@
   max-width: 220px;
   text-align: center;
   color: #FFFFFF;
-  line-height: 2;
+  padding: 8px 10px;
   background: $brand-crimson;
   height: auto;
   border-radius: 5px;
