--- a/styles/base/form.scss
+++ b/styles/base/form.scss
@@ -43,6 +43,46 @@
   }
 }
 
+.form-group {
+  position: relative;
+}
+
+.form-group > .message {
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  z-index: 9999;
+  visibility: hidden;
+  width: 220px;
+  text-align: center;
+  color: #FFFFFF;
+  line-height: 2;
+  background: $brand-crimson;
+  height: 30px;
+}
+
+.form-group > .message:after {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -8px;
+  width: 0;
+  height: 0;
+  border-bottom: 8px solid $brand-crimson;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+}
+
+.form-group .tooltip:hover {
+  background: #000;
+}
+
+.form-group .tooltip:focus + .message {
+  visibility: visible;
+}
+
+
 // fix issue with <select> padding
 select.form-control {
   height: 34px;
