--- a/styles/base/form.scss
+++ b/styles/base/form.scss
@@ -41,6 +41,15 @@
   &.-sun {
     @include form-variant($brand-sun);
   }
+
+  &.-error {
+    @include form-variant($brand-crimson);
+    background-color: lighten($brand-crimson, 30);
+    color: $brand-crimson-dk;
+    &::-webkit-input-placeholder {
+      color: $brand-crimson-dk;
+    }
+  }
 }
 
 .form-group {
@@ -59,6 +68,7 @@
   line-height: 2;
   background: $brand-crimson;
   height: 30px;
+  border-radius: 5px;
 }
 
 .form-group > .message:after {
@@ -72,10 +82,6 @@
   border-bottom: 8px solid $brand-crimson;
   border-right: 8px solid transparent;
   border-left: 8px solid transparent;
-}
-
-.form-group .tooltip:hover {
-  background: #000;
 }
 
 .form-group .tooltip:focus + .message {
