add new button type hide-button

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -172,3 +172,21 @@
     border-radius: 0;
   }
 }
+
+.hide-text {
+  display: block;
+  > .extender {
+    display: inline-block;
+    height: 12px;
+    padding: 0 5px;
+    font-size: ($font-size-base - 2);
+    font-weight: bold;
+    line-height: 6px;
+    color: $brand-gray-dk;
+    border: 1px solid transparent;
+    border-radius: 1px;
+    text-decoration: none;
+    vertical-align: middle;
+    outline: none;
+  }
+}
