--- a/styles/components/_tooltip.scss
+++ b/styles/components/_tooltip.scss
@@ -3,68 +3,68 @@
   color: $brand-white;
   border-radius: $border-radius-base;
   padding: 5px;
-}
 
-.tooltip.arrowleft {
-  margin-right: 10px;
-}
+  &.-arrowright {
+    margin-right: 10px;
+  }
 
-.tooltip.arrowleft:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 100%;
-  margin-top: -8px;
-  width: 0; height: 0;
-  border-left: 8px solid $brand-black;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-}
+  &.-arrowright:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -8px;
+    width: 0; height: 0;
+    border-left: 8px solid $brand-black;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+  }
 
-.tooltip.arrowright {
-  margin-left: 10px;
-}
+  &.-arrowleft {
+    margin-left: 10px;
+  }
 
-.tooltip.arrowright:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: 100%;
-  margin-top: -8px;
-  width: 0; height: 0;
-  border-right: 8px solid $brand-black;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-}
+  &.-arrowleft:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -8px;
+    width: 0; height: 0;
+    border-right: 8px solid $brand-black;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+  }
 
-.tooltip.arrowup {
-  margin-bottom: 10px;
-}
+  &.-arrowdown {
+    margin-bottom: 10px;
+  }
 
-.tooltip.arrowup:after {
-  content: '';
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -8px;
-  width: 0; height: 0;
-  border-top: 8px solid $brand-black;
-  border-right: 8px solid transparent;
-  border-left: 8px solid transparent;
-}
+  &.-arrowdown:after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -8px;
+    width: 0; height: 0;
+    border-top: 8px solid $brand-black;
+    border-right: 8px solid transparent;
+    border-left: 8px solid transparent;
+  }
 
-.tooltip.arrowdown {
-  margin-top: 10px;
-}
+  &.-arrowup {
+    margin-top: 10px;
+  }
 
-.tooltip.arrowdown:after {
-  content: '';
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  margin-left: -8px;
-  width: 0; height: 0;
-  border-bottom: 8px solid $brand-black;
-  border-right: 8px solid transparent;
-  border-left: 8px solid transparent;
+  &.-arrowup:after {
+    content: '';
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -8px;
+    width: 0; height: 0;
+    border-bottom: 8px solid $brand-black;
+    border-right: 8px solid transparent;
+    border-left: 8px solid transparent;
+  }
 }
