--- a/styles/components/_image-preloader.scss
+++ b/styles/components/_image-preloader.scss
@@ -1,8 +1,5 @@
 .wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 200px;
-    height: 200px;
-    background: #EDEDED;
+  display: block;
+  position: absolute;
+  background: $brand-gray-lt;
 }
