change hardcoded white color to variable white color

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -56,7 +56,7 @@
   max-width: 220px;
   text-align: center;
   padding: 10px 15px;
-  color: #FFFFFF;
+  color: $brand-white;
   background: $brand-crimson;
   border-radius: 5px;
   line-height: 1;
