change bg-color from primary to emerald

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -72,7 +72,7 @@
 
   > .menu > a .badge {
     float: right; 
-    background-color: $brand-primary;
+    background-color: $brand-emerald;
     color: $brand-white;
   }
 
