--- a/styles/components/_list-group.scss
+++ b/styles/components/_list-group.scss
@@ -47,14 +47,13 @@
   }
 
   > .menuitem > .badge { 
-    float: right; 
-    background: $brand-emerald;
-    color: $brand-white;
+    @extend .badge.-emerald;
+    float: right;
   }
 
   > .menuitem.-selected > .badge { 
     float: right; 
-    background: $brand-white;
+    background-color: $brand-white;
     color: $brand-black;
   }
 }
