--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -79,6 +79,23 @@
 }
 
 
+.form-group .form-control + .message.-top {
+  bottom: 40px;
+  top: -40px;
+}
+
+.form-group .form-control + .message.-top:after {
+  top: 100%;
+  border-top: 8px solid $brand-crimson;
+  border-bottom: none;
+}
+
+.form-group .form-control:hover + .message.-top,
+.form-group .form-control:focus + .message.-top {
+ visibility: visible;
+}
+
+
 // fix issue with <select> padding
 select.form-control {
   height: 34px;
