--- a/styles/components/_panel.scss
+++ b/styles/components/_panel.scss
@@ -24,6 +24,7 @@
     padding: 10px 15px;
     border-top-left-radius: $border-radius-base;
     border-top-right-radius: $border-radius-base;
+    border-bottom: 1px solid $brand-gray;
   }
 
   > .heading > * {
@@ -48,12 +49,12 @@
   // in the discussion, it wasn't decided whether to
   // include the .-bordered modifier here (meaning, we're only dealing with .table)
   // refactor soon.
-  > .table.-bordered > thead > tr > th:first-child, 
+  > .table.-bordered > thead > tr > th:first-child,
   > .table.-bordered > tbody > tr > td:first-child {
     border-left: 0;
   }
 
-  > .table.-bordered > thead > tr > th:last-child, 
+  > .table.-bordered > thead > tr > th:last-child,
   > .table.-bordered > tbody > tr > td:last-child {
     border-right: 0;
   }
