Improve loader presentation.

--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -7,6 +7,7 @@ $icon-path: "../../dist/fonts";
 @import "layout";
 @import "footer";
 @import "icons";
+@import "loader";
 @import "utils";
 
 .doc-bottom-space { margin-bottom: 25px; }
