--- a/styles/components/_steps.scss
+++ b/styles/components/_steps.scss
@@ -8,14 +8,12 @@
     position: relative;
     display: inline-block;
     margin: 0 25px;
-    width: 50px;
-    height: 50px;
-    padding: 2px 10px;
+    width: 40px;
+    height: 40px;
     text-align: center;
     background: $brand-gray-lt;
     border-radius: 50%;
     border: 3px solid $brand-gray;
-    font-size: $small;
   }
 
   li > a {
@@ -28,30 +26,44 @@
     padding: 8px 0;
   }
 
-  li::before {
+  li::after {
     content: '';
     position: absolute;
-    top: 20px;
-    right: 5px;
+    top: 15px;
+    left: 40px;
     width: 100px;
-    height: 5px;
+    height: 3px;
     background: $brand-gray;
     z-index: -1;
   }
 
-  li:first-child { margin-left: 0; }
-  li:last-child { margin-right: 0; }
-  li:first-child::before { display: none; }
+  li:first-child {
+    margin-left: 0;
+  }
 
-  .active > a { color: $brand-white; }
-  .active::before,
-  .active {
+  li:last-child {
+    margin-right: 0;
+  }
+
+  li:last-child::after {
+    display: none;
+  }
+
+  .complete,
+  .complete::after {
+    background: $brand-emerald;
+  }
+
+  .complete > a {
+    color: $brand-white;
+  }
+
+  .active,
+  .active::after {
     background: $brand-sky-dk;
   }
 
-  .complete > a { color: $brand-white; }
-  .complete,
-  .complete:before {
-    background: $brand-emerald;
+  .active > a {
+    color: $brand-white;
   }
 }
