--- a/styles/components/_steps.scss
+++ b/styles/components/_steps.scss
@@ -10,6 +10,7 @@
     margin: 0 25px;
     width: 40px;
     height: 40px;
+    line-height: 40px;
     text-align: center;
     background: $brand-gray-lt;
     border-radius: 50%;
@@ -22,15 +23,10 @@
     text-decoration: none;
   }
 
-  > li > a > .icon {
-    padding: 8px 0;
-  }
-
   li::after {
     content: '';
     position: absolute;
     top: 15px;
-    left: 40px;
     width: 100px;
     height: 3px;
     background: $brand-gray;
