blend addons border color to the inputs border-color

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -155,7 +155,7 @@ label {
     vertical-align: middle;
     padding: 0 8px;
     background: $brand-gray-lt;
-    border: 1px solid $brand-gray;
+    border: 1px solid $brand-black;
     border-radius: $border-radius-base;
   }
 
