--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -66,6 +66,14 @@
       text-decoration: underline;
       background: transparent;
     }
+
+    &.-disabled,
+    &:disabled,
+    &.-disabled:hover,
+    &:disabled:hover {
+      background: transparent;
+      text-decoration: none;
+    }
   }
 
   &.-inverted.-default { @include btn-variant-inverted($brand-gray); }
