--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -12,6 +12,8 @@
     background-color: $brand-white;
     border: 1px solid $brand-gray;
     border-radius: $border-radius-base;
+    // @todo
+    // Set to a variable
     box-shadow: 0 3px 3px rgba(0,0,0,0.1);
   }
 
@@ -103,8 +105,6 @@
 
   &.-up > .menu::before,
   &.-up > .menu::after {
-    left: $dropdown-arrow-size;
-    right: initial;
     top: initial;
     bottom: -($dropdown-arrow-size * 2);
     border-bottom-color: transparent;
