Set weight of headings to normal.

--- a/styles/base/_type.scss
+++ b/styles/base/_type.scss
@@ -13,6 +13,10 @@ p, blockquote {
   @include vertical-rhythm;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+}
+
 h1 { font-size: 30px; }
 h2 { font-size: 21px; }
 h3 { font-size: 16px; }
