Set bg to gray for disabled form.

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -24,6 +24,7 @@
   &:disabled {
     color: $brand-gray;
     border-color: $brand-gray-lt;
+    background: $brand-gray-lt;
     cursor: not-allowed;
   }
 
