Increase icon spacing for btn-large.

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -47,11 +47,11 @@
     text-decoration: none;
   }
 
-  &.-default { 
-    @include btn-variant($brand-white, $brand-black); 
+  &.-default {
+    @include btn-variant($brand-white, $brand-black);
     border: 1px solid $brand-gray;
   }
-  
+
   &.-primary { @include btn-variant($brand-primary); }
   &.-sky { @include btn-variant($brand-sky); }
   &.-emerald { @include btn-variant($brand-emerald); }
@@ -116,6 +116,14 @@
     padding: 0 25px;
     font-size: $tiny;
     line-height: 40px;
+  }
+
+  &.-large > .icon:first-child {
+    margin-right: $padding-x-large;
+  }
+
+  &.-large > .icon:last-child {
+    margin-left: $padding-x-large;
   }
 
   &.-rounded {
