--- a/styles/components/_steps.scss
+++ b/styles/components/_steps.scss
@@ -10,7 +10,7 @@
     margin: 0 25px;
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 35px;
     text-align: center;
     background: $brand-gray-lt;
     border-radius: 50%;
@@ -43,6 +43,10 @@
 
   li:last-child::after {
     display: none;
+  }
+
+  li.complete {
+    line-height: 40px;
   }
 
   .complete,
