--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -13,6 +13,7 @@
 
 @import "components/button";
 @import "components/pagination";
+@import "components/light-btn";
 @import "components/alert";
 @import "components/label";
 @import "components/badge";
