Darken dropdown divider.
Resolves https://github.com/dev-onenetworkecommerce/aia/issues/164.

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -72,7 +72,7 @@
   > .menu > .divider {
     height: 1px;
     margin: ($padding-x / 2) 0;
-    background-color: $brand-gray-lt;
+    background-color: $brand-gray;
   }
 
   > .menu > a .badge {
