Set new font sizes.
Resolves https://github.com/dev-onenetworkecommerce/aia/issues/171.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -29,6 +29,12 @@ $container-max-widths: (
 // type base
 $font-size-small: 12px !default;
 $font-size-base: 14px !default;
+$font-size-h1: 36px !default;
+$font-size-h2: 30px !default;
+$font-size-h3: 24px !default;
+$font-size-h4: 20px !default;
+$font-size-h5: 16px !default;
+$font-size-h6: 14px !default;
 $line-height-base: 1.7 !default;
 
 // etc base
