Bolden panel heading.
Resolves https://github.com/dev-onenetworkecommerce/aia/issues/163.

--- a/styles/components/_panel.scss
+++ b/styles/components/_panel.scss
@@ -6,6 +6,7 @@
 
   > .heading {
     padding: 10px 15px;
+    font-weight: bold;
     border-top-left-radius: $border-radius-base;
     border-top-right-radius: $border-radius-base;
     border-bottom: 1px solid $brand-gray-lt;
